# Fee_Adder

./: CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  compile.sh  fee_adder.c
src/: CMakeLists.txt  filesystem.c  filter.c  list.c  payment_manager.c  utils.c  validate.c
src/headers/: config.h  filesystem.h  filter.h  list.h  utils.h  validate.h
src/scripts/: create-desktop-shortcut.vbs  create-file-shortcut.vbs
